fix spacing issue on dashboard

--- a/public/stylesheets/web-app-theme/override.css
+++ b/public/stylesheets/web-app-theme/override.css
@@ -13,6 +13,13 @@
 	margin: 15px 0;
 }
 
+  .inner h3 span {
+    font-size: 14px;
+    border-left: 1px solid #d9dbdd;
+    padding-left: 6px;
+    font-weight: normal;
+  }
+
 .inner label { 
 	float: left; 
 	width: 100px;
